--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -1,1 +1,64 @@
-.success{}
+.success {
+  border: solid 2px white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  &-heading {
+  }
+  &-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 10px;
+
+    &-launchname {
+      flex: 1;
+      border: solid 1px white;
+      display: flex;
+      position: relative;
+
+      &-name {
+        flex: 9;
+      }
+      &-indicator {
+        flex: 1;
+        background-color: green;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        margin: 10px;
+        position: absolute;
+        top: 3 px;
+        right: 3px;
+      }
+    }
+    &-gap {
+      flex: 1;
+    }
+    &-time {
+      flex: 1;
+      border: solid 1px white;
+      display: flex;
+
+      &-watchblock {
+        display: flex;
+        flex-direction: column;
+        flex: 9;
+        border: solid 1px white;
+        &-label {
+          flex: 1;
+          border: solid 1px white;
+        }
+        &-timer {
+          flex: 1;
+        }
+      }
+      &-id {
+        flex: 1;
+        border: solid 1px white;
+        align-self: flex-end;
+      }
+    }
+  }
+}
