Launches and Launch component css done and dissmissed div gap at Success component and dynamically get space in home page

--- a/src/components/launch/launch.css
+++ b/src/components/launch/launch.css
@@ -1,3 +1,16 @@
-.launch{
+.launch {
+  flex: 1;
+  border: solid 1px white;
+  display:flex;
+  flex-direction:column;
+  padding:10px;
+  gap:25px;
+
+  &-name{
+   
+  }
+
+  &-id{
     
+  }
 }
