--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    flex-wrap:wrap;
 
     &-input {
       flex: 3;
@@ -20,6 +21,7 @@
       flex: 1;
       border: solid 1px red;
       padding: 10px;
+  
     }
   }
 }
