--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -9,6 +9,7 @@
   &-container {
     display: flex;
     flex-direction: column;
+    gap: 40px;
     height: 100%;
     padding: 10px;
 
@@ -27,15 +28,12 @@
         width: 30px;
         height: 30px;
         border-radius: 50%;
-        margin: 10px;
         position: absolute;
-        top: 3 px;
-        right: 3px;
+        top: 0px;
+        right: 10px;
       }
     }
-    &-gap {
-      flex: 1;
-    }
+
     &-time {
       flex: 1;
       border: solid 1px white;
