--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,17 +12,15 @@
     flex-direction: column;
 
     &-search {
-      flex: 1;
       border: solid 1px red;
     }
 
     &-status {
-      flex:3;
+      margin: 30px 0 0 0;
       border: solid 1px red;
     }
 
     &-pastlaunches {
-      flex: 3;
       border: solid 1px red;
     }
   }
