error component css developed and some scaling issue fixed

--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -4,14 +4,13 @@
   display: flex;
   flex-direction: column;
 
-  &-heading {
-  }
   &-container {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     height: 100%;
     padding: 10px;
+    background-color: #f0f2f5;
 
     &-launchname {
       flex: 1;
