--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,7 +7,6 @@
   &-container {
     height: 80%;
     width: 60%;
-    background-color: grey;
     display: flex;
     flex-direction: column;
 
@@ -18,6 +17,9 @@
     &-status {
       margin: 30px 0 0 0;
       border: solid 1px red;
+
+      &-heading {
+      }
     }
 
     &-pastlaunches {
