--- a/src/components/launches/launches.css
+++ b/src/components/launches/launches.css
@@ -1,11 +1,10 @@
 .launches {
   border: solid 1px white;
-  margin: 40px 0 0 0;
-
   &-heading {
   }
 
   &-parent {
+    padding: 20px 0 0 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
