--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -1,4 +1,5 @@
 .success {
+  padding: 20px 0 0 0;
   border: solid 2px white;
   height: 100%;
   display: flex;
@@ -13,7 +14,7 @@
     background-color: #f0f2f5;
 
     &-launchname {
-      flex: 1;
+      height: 100%;
       border: solid 1px white;
       display: flex;
       position: relative;
@@ -34,7 +35,7 @@
     }
 
     &-time {
-      flex: 1;
+      height: 100%;
       border: solid 1px white;
       display: flex;
 
