--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,7 +6,7 @@
 
   &-container {
     height: 80%;
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
 
@@ -15,15 +15,18 @@
     }
 
     &-status {
-      margin: 30px 0 0 0;
-      border: solid 1px red;
+      border: solid 1px green;
+      display: flex;
+      flex-direction: column;
+      padding: 20px 0 0 0;
 
       &-heading {
       }
     }
 
     &-pastlaunches {
-      border: solid 1px red;
+      padding: 20px 0 0 0;
+      border: solid 1px green;
     }
   }
 }
