--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -38,6 +38,7 @@
       height: 100%;
       border: solid 1px white;
       display: flex;
+      flex-wrap: wrap;
 
       &-watchblock {
         display: flex;
