--- a/src/components/launch/launch.css
+++ b/src/components/launch/launch.css
@@ -11,5 +11,25 @@
   }
 
   &-id {
+    font-size: 25px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .launch {
+    flex: 1;
+    border: solid 1px white;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 25px;
+    background-color: #f0f2f5;
+
+    &-name {
+    }
+
+    &-id {
+      font-size: 17px;
+    }
   }
 }
